--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,32 +49,32 @@ android {
 }
 
 dependencies {
-    implementation "androidx.core:core-ktx:1.10.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
-    implementation "androidx.activity:activity-compose:1.7.2"
-    implementation "androidx.compose.ui:ui:1.4.3"
-    implementation "androidx.compose.ui:ui-graphics:1.4.3"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.4.3"
-    implementation "androidx.compose.material3:material3:1.1.1"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
-    implementation "org.orbit-mvi:orbit-compose:6.0.0"
+    implementation("androidx.core:core-ktx:1.10.1")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.1")
+    implementation("androidx.activity:activity-compose:1.7.2")
+    implementation("androidx.compose.ui:ui:1.4.3")
+    implementation("androidx.compose.ui:ui-graphics:1.4.3")
+    implementation("androidx.compose.ui:ui-tooling-preview:1.4.3")
+    implementation("androidx.compose.material3:material3:1.1.1")
+    implementation("com.google.accompanist:accompanist-systemuicontroller:0.30.1")
+    implementation("org.orbit-mvi:orbit-compose:6.0.0")
     implementation("org.orbit-mvi:orbit-viewmodel:6.0.0")
-    debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.3"
+    debugImplementation("androidx.compose.ui:ui-tooling:1.4.3")
+    debugImplementation("androidx.compose.ui:ui-test-manifest:1.4.3")
 
     implementation platform("org.jetbrains.kotlin:kotlin-bom:1.9.0")
     implementation platform("androidx.compose:compose-bom:2023.06.01")
 
-    testImplementation "junit:junit:4.13.2"
+    testImplementation("junit:junit:4.13.2")
 
-    androidTestImplementation "androidx.test.ext:junit:1.1.5"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.3"
+    androidTestImplementation("androidx.test.ext:junit:1.1.5")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.4.3")
 
     androidTestImplementation platform("androidx.compose:compose-bom:2023.06.01")
 
     def nav_version = "2.6.0"
-    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation("androidx.navigation:navigation-compose:$nav_version")
 
     def koinVersion = "3.4.2"
     implementation("io.insert-koin:koin-androidx-compose:3.4.5")
@@ -104,10 +104,10 @@ dependencies {
     implementation("com.google.code.gson:gson:$gsonVersion")
 
     def room_version = "2.5.2"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-paging:$room_version"
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-paging:$room_version")
 
-    implementation "com.github.jeziellago:compose-markdown:0.3.4"
-    implementation 'com.github.mukeshsolanki:MarkdownView-Android:2.0.0'
+    def markdown_version = "0.3.4"
+    implementation("com.github.jeziellago:compose-markdown:$markdown_version")
 }
